project: changed project name to nesemu.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(nesmu VERSION 0.0.1 LANGUAGES CXX)
+project(nesemu VERSION 0.0.1 LANGUAGES CXX)
 
 find_package(GTest)
 include(FindPkgConfig)
@@ -10,7 +10,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-add_executable(nesmu
+add_executable(nesemu
 	instructions.hpp
 	main.cpp
 	opcodes.hpp
